bk_ida/gccida/c2/build_type_attribute_variant
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3148:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *attributes; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3160:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3191:12: error: expected expression
*( _OWORD *)( v7 + 9) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3191:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v7 + 9) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3218:20: error: expected expression
v16 = ( tree_node *)v7; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3218:9: error: use of undeclared identifier 'tree_node'
v16 = ( tree_node *)v7; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3219:7: error: use of undeclared identifier 'debug_no_type_hash'
if ( !debug_no_type_hash ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3225:35: error: expected expression
if ( !v17 || ( v16 = ( tree_node *)*( ( _QWORD *)v17 + 1)) == 0LL ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3225:24: error: use of undeclared identifier 'tree_node'
if ( !v17 || ( v16 = ( tree_node *)*( ( _QWORD *)v17 + 1)) == 0LL ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3231:20: error: expected expression
v16 = ( tree_node *)v7; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/tree.c:3231:9: error: use of undeclared identifier 'tree_node'
v16 = ( tree_node *)v7; 
        ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_type_attribute_variant/src/obj/tree.o] Error 1
